--- a/taijitu/localisation/taijitu_l_english.yml
+++ b/taijitu/localisation/taijitu_l_english.yml
@@ -3,12 +3,14 @@
  name_list_Advent:0 "Advent"
  name_list_Hemmish:0 "Hemmish"
  name_list_Morosi:0 "Mor'osi"
+ name_list_Ivaanik:0 "Ivaanik"
  
  # Empire names
  EMPIRE_DESIGN_advent:0 "Advent Coalition"
  EMPIRE_DESIGN_hemms:0 "Hemmish Federacy"
  EMPIRE_DESIGN_moros:0 "Halidom of Mor'os"
-
+ EMPIRE_DESIGN_ivaanik:0 "Commune of Tallasak"
+ 
  #Flag categories
  FLAG_CATEGORY_custom:0 "Custom"
  
